testdata/golden/sema/invalid/enum_duplicate_variant.fmt
// Error: duplicate variant name

enum Status = {
    Unknown,
    Started,
    Done,
    Started
}
